// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds posts views embeds video with record. 1`] = `
Object {
  "author": Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": Array [
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.recordWithMedia#view",
    "media": Object {
      "$type": "app.bsky.embed.video#view",
      "alt": "alt text",
      "aspectRatio": Object {
        "height": 3,
        "width": 4,
      },
      "cid": "cids(3)",
      "playlist": "https://bsky.public.url/vid/user(1)/cids(3)/playlist.m3u8",
      "thumbnail": "https://bsky.public.url/vid/user(1)/cids(3)/thumbnail.jpg",
    },
    "record": Object {
      "record": Object {
        "$type": "app.bsky.embed.record#viewRecord",
        "author": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
          "labels": Array [
            Object {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-a",
            },
            Object {
              "cid": "cids(2)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(1)",
              "val": "self-label-b",
            },
          ],
        },
        "cid": "cids(4)",
        "embeds": Array [],
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 1,
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(2)",
        "value": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "embedded",
        },
      },
    },
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": Object {
      "$type": "app.bsky.embed.recordWithMedia",
      "media": Object {
        "$type": "app.bsky.embed.video",
        "alt": "alt text",
        "aspectRatio": Object {
          "height": 3,
          "width": 4,
        },
        "video": Object {
          "$type": "blob",
          "mimeType": "image/mp4",
          "ref": Object {
            "$link": "cids(3)",
          },
          "size": 13,
        },
      },
      "record": Object {
        "record": Object {
          "cid": "cids(4)",
          "uri": "record(2)",
        },
      },
    },
    "text": "video",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds posts views embeds video. 1`] = `
Object {
  "author": Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": Array [
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.video#view",
    "alt": "alt text",
    "aspectRatio": Object {
      "height": 3,
      "width": 4,
    },
    "cid": "cids(3)",
    "playlist": "https://bsky.public.url/vid/user(1)/cids(3)/playlist.m3u8",
    "thumbnail": "https://bsky.public.url/vid/user(1)/cids(3)/thumbnail.jpg",
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": Object {
      "$type": "app.bsky.embed.video",
      "alt": "alt text",
      "aspectRatio": Object {
        "height": 3,
        "width": 4,
      },
      "video": Object {
        "$type": "blob",
        "mimeType": "image/mp4",
        "ref": Object {
          "$link": "cids(3)",
        },
        "size": 13,
      },
    },
    "text": "video",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
}
`;

exports[`pds posts views fetches posts 1`] = `
Array [
  Object {
    "author": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [
      Object {
        "cid": "cids(0)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(0)",
        "val": "self-label",
      },
    ],
    "likeCount": 0,
    "quoteCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "labels": Object {
        "$type": "com.atproto.label.defs#selfLabels",
        "values": Array [
          Object {
            "val": "self-label",
          },
        ],
      },
      "text": "hey there",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(0)",
    "viewer": Object {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  Object {
    "author": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(2)",
    "viewer": Object {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  Object {
    "author": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "quoteCount": 1,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "langs": Array [
        "en-US",
        "i-klingon",
      ],
      "text": "bob back at it again!",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(3)",
    "viewer": Object {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  Object {
    "author": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(4)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(8)",
        "following": "record(7)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(5)",
    "embed": Object {
      "$type": "app.bsky.embed.recordWithMedia#view",
      "media": Object {
        "$type": "app.bsky.embed.images#view",
        "images": Array [
          Object {
            "alt": "../dev-env/assets/key-landscape-small.jpg",
            "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(6)@jpeg",
            "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(6)@jpeg",
          },
          Object {
            "alt": "../dev-env/assets/key-alt.jpg",
            "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(7)@jpeg",
            "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(7)@jpeg",
          },
        ],
      },
      "record": Object {
        "record": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(2)",
            "displayName": "bobby",
            "handle": "bob.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "followedBy": "record(5)",
              "following": "record(4)",
              "muted": false,
            },
          },
          "cid": "cids(4)",
          "embeds": Array [],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "likeCount": 0,
          "quoteCount": 1,
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(3)",
          "value": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "langs": Array [
              "en-US",
              "i-klingon",
            ],
            "text": "bob back at it again!",
          },
        },
      },
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 2,
    "quoteCount": 1,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.recordWithMedia",
        "media": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(6)",
                },
                "size": 4114,
              },
            },
            Object {
              "alt": "../dev-env/assets/key-alt.jpg",
              "image": Object {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": Object {
                  "$link": "cids(7)",
                },
                "size": 12736,
              },
            },
          ],
        },
        "record": Object {
          "record": Object {
            "cid": "cids(4)",
            "uri": "record(3)",
          },
        },
      },
      "text": "hi im carol",
    },
    "replyCount": 0,
    "repostCount": 0,
    "uri": "record(6)",
    "viewer": Object {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(9)",
      "threadMuted": false,
    },
  },
  Object {
    "author": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
        "chat": Object {
          "allowIncoming": "none",
        },
      },
      "did": "user(6)",
      "handle": "dan.test",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "following": "record(11)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(8)",
    "embed": Object {
      "$type": "app.bsky.embed.record#view",
      "record": Object {
        "$type": "app.bsky.embed.record#viewRecord",
        "author": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(4)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(8)",
            "following": "record(7)",
            "muted": false,
          },
        },
        "cid": "cids(5)",
        "embeds": Array [
          Object {
            "$type": "app.bsky.embed.recordWithMedia#view",
            "media": Object {
              "$type": "app.bsky.embed.images#view",
              "images": Array [
                Object {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(6)@jpeg",
                  "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(6)@jpeg",
                },
                Object {
                  "alt": "../dev-env/assets/key-alt.jpg",
                  "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(5)/cids(7)@jpeg",
                  "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(5)/cids(7)@jpeg",
                },
              ],
            },
            "record": Object {
              "record": Object {
                "$type": "app.bsky.embed.record#viewRecord",
                "author": Object {
                  "associated": Object {
                    "activitySubscription": Object {
                      "allowSubscriptions": "followers",
                    },
                  },
                  "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)@jpeg",
                  "createdAt": "1970-01-01T00:00:00.000Z",
                  "did": "user(2)",
                  "displayName": "bobby",
                  "handle": "bob.test",
                  "labels": Array [],
                  "viewer": Object {
                    "blockedBy": false,
                    "followedBy": "record(5)",
                    "following": "record(4)",
                    "muted": false,
                  },
                },
                "cid": "cids(4)",
                "indexedAt": "1970-01-01T00:00:00.000Z",
                "labels": Array [],
                "likeCount": 0,
                "quoteCount": 1,
                "replyCount": 0,
                "repostCount": 0,
                "uri": "record(3)",
                "value": Object {
                  "$type": "app.bsky.feed.post",
                  "createdAt": "1970-01-01T00:00:00.000Z",
                  "langs": Array [
                    "en-US",
                    "i-klingon",
                  ],
                  "text": "bob back at it again!",
                },
              },
            },
          },
        ],
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 2,
        "quoteCount": 1,
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(6)",
        "value": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.recordWithMedia",
            "media": Object {
              "$type": "app.bsky.embed.images",
              "images": Array [
                Object {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(6)",
                    },
                    "size": 4114,
                  },
                },
                Object {
                  "alt": "../dev-env/assets/key-alt.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(7)",
                    },
                    "size": 12736,
                  },
                },
              ],
            },
            "record": Object {
              "record": Object {
                "cid": "cids(4)",
                "uri": "record(3)",
              },
            },
          },
          "text": "hi im carol",
        },
      },
    },
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "quoteCount": 1,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.record",
        "record": Object {
          "cid": "cids(5)",
          "uri": "record(6)",
        },
      },
      "facets": Array [
        Object {
          "features": Array [
            Object {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(0)",
            },
          ],
          "index": Object {
            "byteEnd": 18,
            "byteStart": 0,
          },
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(10)",
    "viewer": Object {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
  Object {
    "author": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(1)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 0,
    "quoteCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(10)",
          "uri": "record(13)",
        },
        "root": Object {
          "cid": "cids(3)",
          "uri": "record(2)",
        },
      },
      "text": "thanks bob",
    },
    "replyCount": 0,
    "repostCount": 1,
    "uri": "record(12)",
    "viewer": Object {
      "bookmarked": false,
      "embeddingDisabled": false,
      "threadMuted": false,
    },
  },
]
`;
